[gd_scene load_steps=9 format=3 uid="uid://d1oma3n6m0e30"]

[ext_resource type="Script" path="res://StartScreen.gd" id="1_2mxhj"]
[ext_resource type="Texture2D" uid="uid://c7ysy2bxwlout" path="res://Management/Texture/Backgroun.png" id="2_ddeqt"]
[ext_resource type="FontFile" uid="uid://cryeefx34b5cl" path="res://Management/Fonts/Creepster-Regular.ttf" id="3_47lo1"]
[ext_resource type="Texture2D" uid="uid://dmuh2uclrnk2m" path="res://Management/Texture/Button.png" id="4_uy8qr"]

[sub_resource type="Animation" id="Animation_qyvqx"]
resource_name = "Play"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(90, 361), Vector2(-22, 361), Vector2(90, 361)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_15a1g"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(90, 361)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}

[sub_resource type="Animation" id="Animation_sj1f8"]
resource_name = "Start"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Node2D:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(1.2, 1.2), Vector2(1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Node2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.5, 0.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(90, 361), Vector2(-13, 361), Vector2(90, 361), Vector2(90, 361), Vector2(958, 361)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_a8vcf"]
_data = {
"Play": SubResource("Animation_qyvqx"),
"RESET": SubResource("Animation_15a1g"),
"Start": SubResource("Animation_sj1f8")
}

[node name="StartScreen" type="Node2D"]
script = ExtResource("1_2mxhj")

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 3.0
offset_right = 1155.0
offset_bottom = 648.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_ddeqt")

[node name="Label" type="Label" parent="."]
anchors_preset = 10
anchor_right = 1.0
offset_left = 106.0
offset_top = 33.0
offset_right = 1063.0
offset_bottom = 142.0
grow_horizontal = 2
theme_override_colors/font_shadow_color = Color(0.976471, 0.352941, 1, 1)
theme_override_colors/font_outline_color = Color(0.976471, 0.352941, 1, 1)
theme_override_constants/shadow_offset_x = -12
theme_override_constants/shadow_offset_y = 11
theme_override_constants/outline_size = 21
theme_override_fonts/font = ExtResource("3_47lo1")
theme_override_font_sizes/font_size = 100
text = "Don't Stop Being a Cute Cat"

[node name="Node2D" type="Node2D" parent="."]
position = Vector2(90, 361)

[node name="TextureButton" type="TextureButton" parent="Node2D"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 179.0
offset_top = 46.0
offset_right = 879.0
offset_bottom = 246.0
grow_horizontal = 2
grow_vertical = 0
texture_normal = ExtResource("4_uy8qr")

[node name="Label" type="Label" parent="Node2D/TextureButton"]
layout_mode = 0
offset_left = 243.0
offset_top = 39.0
offset_right = 635.0
offset_bottom = 148.0
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0.819608, 0.431373, 0.701961, 1)
theme_override_constants/outline_size = 21
theme_override_fonts/font = ExtResource("3_47lo1")
theme_override_font_sizes/font_size = 90
text = "START GAME
"

[node name="Animation" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_a8vcf")
}

[connection signal="mouse_entered" from="Node2D/TextureButton" to="." method="_on_texture_button_mouse_entered"]
[connection signal="mouse_exited" from="Node2D/TextureButton" to="." method="_on_texture_button_mouse_exited"]
[connection signal="pressed" from="Node2D/TextureButton" to="." method="_on_texture_button_pressed"]
